<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/num_pad"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    tools:showIn="@layout/activity_x01_game">

    <TextView
        android:id="@+id/score_view"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textSize="48sp"
        android:textColor="@color/main_white"
        android:background="@color/background"
        android:visibility="gone"/>

    <GridLayout
        android:id="@+id/num_pad_input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:layout_below="@id/score_view"
        android:columnCount="4">

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/one"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_columnWeight="1"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/one" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/two"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_columnWeight="1"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/two" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/three"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_columnWeight="1"
        android:layout_column="2"
        android:layout_row="0"
        android:text="@string/three" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/four"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_columnWeight="1"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/four" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/five"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_columnWeight="1"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/five" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/six"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_columnWeight="1"
        android:layout_column="2"
        android:layout_row="1"
        android:text="@string/six" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/seven"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_columnWeight="1"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/seven" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/eight"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:text="@string/eight" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/nine"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_column="2"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:text="@string/nine" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/zero"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:text="@string/button_zero" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_column="2"
        android:layout_row="3"
        android:id="@+id/submit_button"
        android:background="@color/accent"
        android:textColor="@color/main_white"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:text="@string/no_score" />

    <ImageButton
        android:contentDescription="@string/button_erase_number"
        android:id="@+id/erase"
        style="?attr/buttonBarButtonStyle"
        android:background="@color/primary"
        android:layout_columnWeight="1"
        android:tint="@color/main_white"
        android:layout_gravity="fill"
        android:layout_column="0"
        android:layout_row="3"
        android:src="@android:drawable/ic_input_delete" />
    </GridLayout>
</RelativeLayout>
