...
    <string name="win">Win</string>
    <string name="loss">Loss</string>
    <string name="setup_play_order">Play order:</string>
    <string name="next">next</string>
    <string name="fewest_turns">Fewest turns</string>
    <string name="highest_out">Highest checkout</string>
    <string name="no_score">No score</string>
    <string name="turn">Turn</string>

    <string name="pref_x01_starting_score">Starting score</string>
    <string name="pref_x01_double_out">Double-out</string>
    <string name="pref_x01_double_out_attempts">Double-out attempts</string>
    <string name="pref_x01_double_out_attempts_dialog">Double-out attempts</string>
...
    <string name="pref_key_x01_double_out_attempts">pref_x01_double_out_attempts</string>
    <string name="pref_key_x01_double_out">pref_x01_double_out</string>
    <string name="pref_x01_double_out_attempts_summary">Single-out after %s turns below 50.</string>
    <string name="pref_key_random_nr_of_rounds">pref_key_nr_of_rounds</string>
    <string name="pref_random_nr_of_rounds">Nr of rounds</string>
    <string name="zero">0</string>
    <string name="submit">SUBMIT</string>
    <string name="drawer_item_statistics">Statistics</string>
    <string name="drawer_item_profiles">Profiles</string>
    <string name="drawer_item_home">Home</string>
    <string name="winner">WINNER</string>
    <string name="random">Random</string>
    <string name="games">Games</string>
...
