...
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_alignEnd="@id/profile_detail_games_won_label"
            android:layout_alignStart="@id/profile_detail_games_won_label"
            android:text="@{Integer.toString(viewModel.profile.getGamesWon())}"
            tools:text="12"/>
    </RelativeLayout>
</layout>
